--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">QuickCabs</string>
+    <string name="next">Next</string>
+    <string name="upi">UPI</string>
+    <string name="choose_cab">Choose QuickCab</string>
 </resources>
